Fix sidebar toggle button being hidden on mobile.

--- a/src/interface/Header/style.scss
+++ b/src/interface/Header/style.scss
@@ -21,4 +21,8 @@
 		flex-wrap: nowrap;
 		gap: 8px;
 	}
+
+	.interface-pinned-items .components-button {
+		display: flex;
+	}
 }
